--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Github</title>
 </head>
 <body>
+    <h1>HEDING</h1>
     <p>git local to remote </p>
-    <p>local vali to remote  </p>
-    
-    
+    <p>local vali to remote  </p>    
 </body>
 </html>
